update card color

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 
 .card {
     height: 350px;
-    background-color: #81a98e;
+    background-color: #369554;
     border-radius: 24px;
     overflow: hidden;
     position: relative;
