--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,10 @@ p>strong {
     .section-one-child p {
         font-size: 16px;
     }
+
+    .card-details p {
+        font-size: 18px;
+    }
 }
 @media (max-width:767px){
     .section-one-child .title{
@@ -230,6 +234,9 @@ p>strong {
 @media (max-width:576px){
     .cards {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .card-details p {
+        font-size: 18px;
     }
 }
 
