--- a/css/style.css
+++ b/css/style.css
@@ -208,13 +208,24 @@ p>strong {
     letter-spacing: 2px;
 }
 
-@media (max-width:992px){
+
+@media (max-width:1350px){
+    .card-details h2{
+        font-size: 20px;
+    }
+}
+
+@media (max-width:1200px){
     .cards {
         grid-template-columns: repeat(2, 1fr);
     }
 
     .section-one-child p {
         font-size: 16px;
+    }
+
+    .card-details h2{
+        font-size: 24px;
     }
 
     .card-details p {
@@ -235,6 +246,11 @@ p>strong {
     .cards {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .card-details h2{
+        font-size: 24px;
+    }
+
     .card-details p {
         font-size: 18px;
     }
