--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .card-details{
